--- a/src/app/pages/dashboard/users/user-dialog.html
+++ b/src/app/pages/dashboard/users/user-dialog.html
@@ -1,48 +1,71 @@
 <mat-dialog-content>
   <form [formGroup]="userForm">
+    <!-- Name Field -->
     <mat-form-field appearance="fill">
       <mat-label>Ad</mat-label>
       <input matInput formControlName="name" />
     </mat-form-field>
 
+    <!-- Surname Field -->
     <mat-form-field appearance="fill">
       <mat-label>Soyad</mat-label>
       <input matInput formControlName="surname" />
     </mat-form-field>
 
+    <!-- Email Field -->
     <mat-form-field appearance="fill">
       <mat-label>Email</mat-label>
       <input matInput formControlName="email" />
     </mat-form-field>
 
+    <!-- Phone Number Field -->
     <mat-form-field appearance="fill">
       <mat-label>Telefon Numarası</mat-label>
       <input matInput formControlName="phoneNumber" />
     </mat-form-field>
 
+    <!-- Role Field -->
     <mat-form-field appearance="fill">
-      <mat-label>İl</mat-label>
+      <mat-label>Rol</mat-label>
       <mat-select
-        formControlName="city"
-        (selectionChange)="onCityChange($event.value)"
+        formControlName="role"
+        (selectionChange)="onRoleChange($event.value)"
       >
-        <mat-option *ngFor="let city of sortedCities" [value]="city.key">
-          {{ city.key }} - {{ city.value }}
+        <mat-option *ngFor="let role of availableRoles" [value]="role">
+          {{ getRoleText(role) }}
         </mat-option>
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
-      <mat-label>İlçe</mat-label>
-      <mat-select formControlName="district">
-        <mat-option
-          *ngFor="let district of filteredDistricts"
-          [value]="district"
+    <!-- City Field (Visible for headquarters and city users) -->
+    <ng-container *ngIf="showCityField">
+      <mat-form-field appearance="fill">
+        <mat-label>İl</mat-label>
+        <mat-select
+          formControlName="city"
+          (selectionChange)="onCityChange($event.value)"
         >
-          {{ district }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+          <mat-option *ngFor="let city of availableCities" [value]="city.value">
+            {{ city.value }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </ng-container>
+
+    <!-- District Field (Visible for city and district users) -->
+    <ng-container *ngIf="showDistrictField">
+      <mat-form-field appearance="fill">
+        <mat-label>İlçe</mat-label>
+        <mat-select formControlName="district">
+          <mat-option
+            *ngFor="let district of filteredDistricts"
+            [value]="district"
+          >
+            {{ district }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </ng-container>
   </form>
 </mat-dialog-content>
 
