--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -69,6 +69,9 @@
           <button mat-button (click)="openUpdateUserDialog(row)">
             Düzenle
           </button>
+          <button mat-button color="warn" (click)="onDeleteUser(row)">
+            Sil
+          </button>
         </mat-cell>
       </ng-container>
 
