--- a/src/app/pages/dashboard/events/event-dialog.html
+++ b/src/app/pages/dashboard/events/event-dialog.html
@@ -1,30 +1,51 @@
 <mat-dialog-content>
   <form [formGroup]="eventForm">
     <mat-form-field appearance="fill">
-      <mat-label>Etkinlik Sahibi</mat-label>
-      <input matInput formControlName="owner" readonly />
+      <mat-label>Etkinlik Türü</mat-label>
+      <mat-select
+        formControlName="type"
+        (selectionChange)="onTypeChange($event.value)"
+      >
+        <mat-option *ngFor="let type of availableEventTypes" [value]="type">
+          {{ getRoleText(type) | titlecase }}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
 
+    <mat-form-field appearance="fill" *ngIf="showCityField">
+      <mat-label>Şehir</mat-label>
+      <mat-select
+        formControlName="city"
+        (selectionChange)="onCityChange($event.value)"
+      >
+        <mat-option *ngFor="let city of availableCities" [value]="city.value">
+          {{ city.key }} - {{ city.value }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <!-- District Selection -->
+    <mat-form-field appearance="fill" *ngIf="showDistrictField">
+      <mat-label>İlçe</mat-label>
+      <mat-select formControlName="district">
+        <mat-option
+          *ngFor="let district of filteredDistricts"
+          [value]="district"
+        >
+          {{ district }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <!-- Event Name -->
     <mat-form-field appearance="fill">
-      <mat-label>Ad</mat-label>
+      <mat-label>Etkinlik Adı</mat-label>
       <input matInput formControlName="name" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
-      <mat-label>Tarih</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="date" />
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-      <mat-label>Mekan</mat-label>
-      <input matInput formControlName="place" />
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
       <mat-label>Etkinlik Tipi</mat-label>
-      <mat-select formControlName="type">
+      <mat-select formControlName="eventType">
         <mat-option value="membershipCampaign">Üye Çalışması</mat-option>
         <mat-option value="meeting">Toplantı</mat-option>
         <mat-option value="seminar">Seminer</mat-option>
@@ -62,43 +83,65 @@
       </mat-select>
     </mat-form-field>
 
+    <!-- Date -->
+    <mat-form-field appearance="fill">
+      <mat-label>Tarih</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="date" />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <!-- Place -->
+    <mat-form-field appearance="fill">
+      <mat-label>Mekan</mat-label>
+      <input matInput formControlName="place" />
+    </mat-form-field>
+
+    <!-- Purpose -->
     <mat-form-field appearance="fill">
       <mat-label>Amaç</mat-label>
       <input matInput formControlName="purpose" />
     </mat-form-field>
 
+    <!-- Number of Participants -->
     <mat-form-field appearance="fill">
       <mat-label>Katılımcı Sayısı</mat-label>
-      <input matInput formControlName="numberOfParticipants" />
+      <input matInput type="number" formControlName="numberOfParticipants" />
     </mat-form-field>
 
+    <!-- Important Participants -->
     <mat-form-field appearance="fill">
       <mat-label>Önemli Katılımcılar</mat-label>
       <input matInput formControlName="importantParticipants" />
     </mat-form-field>
 
+    <!-- Focus Group -->
     <mat-form-field appearance="fill">
       <mat-label>Hedef Kitle</mat-label>
       <input matInput formControlName="focusGroup" />
     </mat-form-field>
 
+    <!-- Budget -->
     <mat-form-field appearance="fill">
       <mat-label>Bütçe</mat-label>
-      <input matInput formControlName="budget" />
+      <input matInput type="number" formControlName="budget" />
     </mat-form-field>
 
+    <!-- Expenses -->
     <mat-form-field appearance="fill">
       <mat-label>Giderler</mat-label>
-      <input matInput formControlName="expenses" />
+      <input matInput type="number" formControlName="expenses" />
     </mat-form-field>
 
+    <!-- Revenues -->
     <mat-form-field appearance="fill">
       <mat-label>Gelirler</mat-label>
-      <input matInput formControlName="revenues" />
+      <input matInput type="number" formControlName="revenues" />
     </mat-form-field>
 
+    <!-- Notes -->
     <mat-form-field appearance="fill">
-      <mat-label>Note</mat-label>
+      <mat-label>Notlar</mat-label>
       <textarea matInput formControlName="notes"></textarea>
     </mat-form-field>
   </form>
