--- a/src/app/pages/dashboard/events/events.component.html
+++ b/src/app/pages/dashboard/events/events.component.html
@@ -20,12 +20,16 @@
         <mat-cell *matCellDef="let row">{{ row.id }}</mat-cell>
       </ng-container>
 
-      <!-- Progress Column -->
-      <ng-container matColumnDef="owner">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          Etkinlik Sahibi
-        </mat-header-cell>
-        <mat-cell mat-cell *matCellDef="let row">{{ row.owner }}</mat-cell>
+      <ng-container matColumnDef="city">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>İl</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.city }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="district">
+        <mat-header-cell *matHeaderCellDef mat-sort-header
+          >İlçe</mat-header-cell
+        >
+        <mat-cell *matCellDef="let row">{{ row.district }}</mat-cell>
       </ng-container>
 
       <!-- Name Column -->
