--- a/src/app/pages/dashboard/events/events.component.scss
+++ b/src/app/pages/dashboard/events/events.component.scss
@@ -26,3 +26,16 @@ th {
     margin-left: 12px;
   }
 }
+
+.image-preview img {
+  max-width: 100%;
+  max-height: 150px;
+  margin-top: 10px;
+}
+
+.event-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 4px;
+}
