implement executive-committee

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -38,10 +38,6 @@
         <mat-icon matListItemIcon>person</mat-icon>
         <div matListItemTitle>Kullanıcılar</div>
       </mat-list-item>
-      <mat-list-item routerLink="./users">
-        <mat-icon matListItemIcon>groups</mat-icon>
-        <div matListItemTitle>Yönetme Kadrosu</div>
-      </mat-list-item>
       <mat-list-item routerLink="./events">
         <mat-icon matListItemIcon>calendar_month</mat-icon>
         <div matListItemTitle>Etkinlikler</div>
@@ -49,6 +45,14 @@
       <mat-list-item routerLink="./announcements">
         <mat-icon matListItemIcon>campaign</mat-icon>
         <div matListItemTitle>Duyurular</div>
+      </mat-list-item>
+      <mat-list-item routerLink="./executive-committee">
+        <mat-icon matListItemIcon>group</mat-icon>
+        <div matListItemTitle>Yürütme Kurulu</div>
+      </mat-list-item>
+      <mat-list-item routerLink="./executive-committee">
+        <mat-icon matListItemIcon>groups</mat-icon>
+        <div matListItemTitle>Yönetim Kurulu</div>
       </mat-list-item>
       <mat-list-item routerLink="./announcements">
         <mat-icon matListItemIcon>monitoring</mat-icon>
