finish management board component

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
         <mat-icon matListItemIcon>group</mat-icon>
         <div matListItemTitle>Yürütme Kurulu</div>
       </mat-list-item>
-      <mat-list-item routerLink="./executive-committee">
+      <mat-list-item routerLink="./management-board">
         <mat-icon matListItemIcon>groups</mat-icon>
         <div matListItemTitle>Yönetim Kurulu</div>
       </mat-list-item>
