implement reports page

--- a/src/app/pages/dashboard/announcements/announcements.component.html
+++ b/src/app/pages/dashboard/announcements/announcements.component.html
@@ -10,7 +10,7 @@
       />
     </mat-form-field>
     <button mat-raised-button (click)="onAddNewAnnouncement()">
-      Etkinlik Ekle
+      Duyuru Ekle
     </button>
   </div>
 
