--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -8,6 +8,11 @@ mat-toolbar {
   }
 }
 
+.account-info {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 .app-container {
   height: 90%;
   margin: 0;
