--- a/src/app/pages/dashboard/main/main.component.html
+++ b/src/app/pages/dashboard/main/main.component.html
@@ -3,11 +3,9 @@
   <div class="row">
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Toplam Etkinlik Sayısı</mat-card-title>
+        <mat-card-title></mat-card-title>
       </mat-card-header>
-      <mat-card-content class="total-events-content">
-        <p class="total-events-number">{{ totalEventCounts }}</p>
-      </mat-card-content>
+      <mat-card-content> </mat-card-content>
     </mat-card>
 
     <mat-card class="example-card">
@@ -33,42 +31,9 @@
     </mat-card>
   </div>
 
-  <!-- Second row with two cards -->
   <div class="row">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Aylara Göre Etkinlikler</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <canvas
-          baseChart
-          [datasets]="barChartData"
-          [labels]="barChartLabels"
-          [options]="barChartOptions"
-          [plugins]="barChartPlugins"
-          [legend]="barChartLegend"
-          [type]="barChartType"
-        >
-        </canvas>
-      </mat-card-content>
-    </mat-card>
+    <mat-card class="example-card"> </mat-card>
 
-    <!-- Add content for related information -->
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Çeşidine Göre Etkinlikler</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <canvas
-          baseChart
-          [datasets]="eventTypesData"
-          [labels]="eventTypesLabels"
-          [options]="eventTypesOptions"
-          [legend]="eventTypesLegend"
-          [type]="eventTypesChartType"
-        >
-        </canvas>
-      </mat-card-content>
-    </mat-card>
+    <mat-card class="example-card"> </mat-card>
   </div>
 </div>
