--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -60,7 +60,7 @@
         <mat-icon matListItemIcon>monitoring</mat-icon>
         <div matListItemTitle>Raporlar</div>
       </mat-list-item>
-      <mat-list-item routerLink="./announcements">
+      <mat-list-item routerLink="./documents">
         <mat-icon matListItemIcon>description</mat-icon>
         <div matListItemTitle>Dökümanlar</div>
       </mat-list-item>
