--- a/src/app/pages/dashboard/main/main.component.html
+++ b/src/app/pages/dashboard/main/main.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <mat-card class="info-card">
       <mat-card-header>
+        <mat-icon mat-card-avatar>person</mat-icon>
         <mat-card-title>Kullanıcı Bilgileri</mat-card-title>
       </mat-card-header>
       <mat-card-content>
@@ -15,6 +16,7 @@
 
     <mat-card class="events-card">
       <mat-card-header>
+        <mat-icon mat-card-avatar>calendar_month</mat-icon>
         <mat-card-title>Son 5 Etkinlik</mat-card-title>
       </mat-card-header>
       <mat-card-content>
@@ -28,6 +30,7 @@
     </mat-card>
     <mat-card class="events-card">
       <mat-card-header>
+        <mat-icon mat-card-avatar>calendar_month</mat-icon>
         <mat-card-title>Yaklaşan 5 Etkinlik</mat-card-title>
       </mat-card-header>
       <mat-card-content>
@@ -44,6 +47,7 @@
   <div class="row">
     <mat-card class="announcements-card">
       <mat-card-header>
+        <mat-icon mat-card-avatar>campaign</mat-icon>
         <mat-card-title>Son 10 Duyuru</mat-card-title>
       </mat-card-header>
       <mat-card-content>
@@ -58,6 +62,7 @@
 
     <mat-card class="links-card">
       <mat-card-header>
+        <mat-icon mat-card-avatar>link</mat-icon>
         <mat-card-title>Bağlantılar</mat-card-title>
       </mat-card-header>
       <mat-card-content>
