--- a/src/app/pages/dashboard/main/main.component.scss
+++ b/src/app/pages/dashboard/main/main.component.scss
@@ -39,7 +39,7 @@ mat-card-content {
     align-items: center;
   }
 
-  .example-card {
+  mat-card {
     width: 100%;
     margin: 10px 0;
     max-width: 100%;
