--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,53 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
 html,
 body {
   height: 100%;
 }
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+$primary-palette: mat.$azure-palette;
+
+$background-color: #ffffff; 
+$surface-color: #ffffff;
+
+
+$my-theme: mat.define-theme((
+  color: (
+    primary: $primary-palette,
+  ),
+  typography: (
+    brand-family: "Roboto, sans-serif"
+  )
+));
+
+:root {
+  @include mat.all-component-themes($my-theme);
+}
+
+:root {
+  --custom-background-color: #{$background-color};
+  --custom-surface-color: #{$surface-color};
+}
+
+.navbar {
+  background-color: var(--md-sys-color-primary);
+  color: var(--md-sys-color-on-primary);
+  padding: 12px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.mat-toolbar {
+  background-color: var(--custom-surface-color);
+  color: var(--md-sys-color-on-surface);
+}
+
+
+mat-sidenav-content {
+  background-color: var(--custom-background-color);
+  color: var(--md-sys-color-on-background);
+}
+
+mat-icon {
+  color: blue;
 }
