--- a/src/app/pages/dashboard/events/event-dialog.html
+++ b/src/app/pages/dashboard/events/event-dialog.html
@@ -46,6 +46,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Etkinlik Tipi</mat-label>
       <mat-select formControlName="eventType">
+        <mat-option value="kongre">Kongre</mat-option>
         <mat-option value="membershipCampaign">Üye Çalışması</mat-option>
         <mat-option value="meeting">Toplantı</mat-option>
         <mat-option value="seminar">Seminer</mat-option>
