remove image requirement

--- a/src/app/pages/dashboard/events/event-dialog.html
+++ b/src/app/pages/dashboard/events/event-dialog.html
@@ -181,7 +181,7 @@
     mat-button
     (click)="onSubmit()"
     cdkFocusInitial
-    [disabled]="eventForm.invalid || (!selectedFile && !data.event.imageUrl)"
+    [disabled]="eventForm.invalid"
   >
     Kaydet
   </button>
