--- a/src/app/pages/dashboard/main/main.component.scss
+++ b/src/app/pages/dashboard/main/main.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  height: calc(100% - 64px);
+  min-height: calc(100% - 64px);
 }
 
 .row {
