--- a/src/app/pages/dashboard/events/event-dialog.html
+++ b/src/app/pages/dashboard/events/event-dialog.html
@@ -47,40 +47,42 @@
       <mat-label>Etkinlik Tipi</mat-label>
       <mat-select formControlName="eventType">
         <mat-option value="kongre">Kongre</mat-option>
-        <mat-option value="membershipCampaign">Üye Çalışması</mat-option>
-        <mat-option value="meeting">Toplantı</mat-option>
-        <mat-option value="seminar">Seminer</mat-option>
+        <mat-option value="uyeCalismasi">Üye Çalışması</mat-option>
+        <mat-option value="toplanti">Toplantı</mat-option>
+        <mat-option value="seminer">Seminer</mat-option>
         <mat-option value="panel">Panel</mat-option>
-        <mat-option value="rally">Miting</mat-option>
-        <mat-option value="socialActivity">Sosyal Aktivite</mat-option>
-        <mat-option value="trainingProgram">Eğitim Programı</mat-option>
-        <mat-option value="conference">Konferans</mat-option>
-        <mat-option value="workshop">Çalıştay</mat-option>
-        <mat-option value="campaignActivity">Kampanya Faaliyeti</mat-option>
-        <mat-option value="aidAndSolidarityEvent"
+        <mat-option value="miting">Miting</mat-option>
+        <mat-option value="sosyalAktivite">Sosyal Aktivite</mat-option>
+        <mat-option value="egitimProgrami">Eğitim Programı</mat-option>
+        <mat-option value="konferans">Konferans</mat-option>
+        <mat-option value="calistay">Çalıştay</mat-option>
+        <mat-option value="kampanyaFaaliyetleri">Kampanya Faaliyeti</mat-option>
+        <mat-option value="yardimVeDayanismaEtkinligi"
           >Yardım ve Dayanışma Etkinliği</mat-option
         >
-        <mat-option value="pressConference">Basın Toplantısı</mat-option>
-        <mat-option value="networkingEvent">Networking Etkinliği</mat-option>
-        <mat-option value="tripsAndStudyTours"
+        <mat-option value="basinToplantisi">Basın Toplantısı</mat-option>
+        <mat-option value="networkingEtkinligi"
+          >Networking Etkinliği</mat-option
+        >
+        <mat-option value="geziVeIncelemeTurlari"
           >Geziler ve İnceleme Turları</mat-option
         >
-        <mat-option value="partyMembersMeeting"
+        <mat-option value="partiUyeleriBulusması"
           >Parti Üyeleri Buluşması</mat-option
         >
-        <mat-option value="campaignLaunch">Kampanya Lansmanı</mat-option>
-        <mat-option value="ideaWorkshop">Fikir Atölyesi</mat-option>
-        <mat-option value="memorialCeremony">Anma Töreni</mat-option>
-        <mat-option value="fundraisingEvent"
+        <mat-option value="kampanyaLansmanı">Kampanya Lansmanı</mat-option>
+        <mat-option value="fikirAtolyesi">Fikir Atölyesi</mat-option>
+        <mat-option value="anmaToreni">Anma Töreni</mat-option>
+        <mat-option value="bagisToplamaEtkinligi"
           >Bağış Toplama Etkinliği</mat-option
         >
-        <mat-option value="localCommunityMeeting"
+        <mat-option value="yerelHalkToplantisi"
           >Yerel Halk Toplantısı</mat-option
         >
-        <mat-option value="strategyDevelopmentSession"
+        <mat-option value="stratejiGeliştirmeOturumu"
           >Strateji Geliştirme Oturumu</mat-option
         >
-        <mat-option value="other">Diğer</mat-option>
+        <mat-option value="diger">Diğer</mat-option>
       </mat-select>
     </mat-form-field>
 
