--- a/src/app/pages/documents/documents.component.scss
+++ b/src/app/pages/documents/documents.component.scss
@@ -1,35 +1,49 @@
 .documents-wrapper {
-    padding: 16px;
-  
-    .upload-section {
-      margin-bottom: 24px;
-  
-      .file-upload {
-        display: flex;
-        align-items: center;
-  
-        label {
-          margin-right: 16px;
-        }
-  
-        input[type='file'] {
-          margin-right: 16px;
-        }
+  padding: 16px;
+
+  .upload-section {
+    margin-bottom: 24px;
+
+    .file-upload {
+      display: flex;
+      align-items: center;
+
+      label {
+        margin-right: 16px;
+      }
+
+      input[type="file"] {
+        margin-right: 16px;
       }
     }
-  
-    mat-form-field {
-      width: 300px;
-      margin-right: 16px;
-    }
-  
-    mat-table {
-      width: 100%;
-      margin-top: 16px;
-    }
-  
-    button {
-      margin-top: 16px;
-    }
   }
-  
+
+  mat-form-field {
+    width: 300px;
+    margin-right: 16px;
+  }
+
+  mat-table {
+    width: 100%;
+    margin-top: 16px;
+  }
+
+  button {
+    margin-top: 16px;
+  }
+}
+
+.audience-type-wrapper {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.upload-container {
+  padding: 24px;
+}
+
+.documents-table {
+  padding: 24px;
+}
