--- a/src/app/pages/dashboard/events/event-dialog.scss
+++ b/src/app/pages/dashboard/events/event-dialog.scss
@@ -1,52 +1,55 @@
 :host {
-    display: block;
-    padding: 1rem;
+  display: block;
+  padding: 1rem;
+}
+
+mat-dialog-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+mat-dialog-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  max-width: 100%;
+  width: 100%;
+  margin: 0 auto;
+
+  @media (max-width: 600px) {
+    max-width: 90%;
   }
-  
-  mat-dialog-content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  
-  mat-dialog-actions {
-    display: flex;
-    justify-content: flex-end;
-    gap: 1rem;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  
-    max-width: 100%;
-    width: 100%;
-    margin: 0 auto;
-  
-    @media (max-width: 600px) {
-      max-width: 90%;
-    }
-  }
-  
-  mat-form-field {
-    width: 100%;
-  }
-  
-  .file-input-wrapper {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
-  
-  .file-input-label {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-  
-  .file-preview {
-    font-size: 0.9rem;
-    color: #4caf50;
-  }
-  
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.file-input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.file-input-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.file-preview {
+  font-size: 0.9rem;
+  color: #4caf50;
+}
+
+img {
+  max-width: 100px;
+}
