--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
     <mat-icon>menu</mat-icon>
   </button>
-  Parti Yönetim
+  Organizasyon Yönetim
   <span class="toolbar-item-spacer"></span>
   <button
     mat-icon-button
