implement new theme

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,7 +2,13 @@
   <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
     <mat-icon>menu</mat-icon>
   </button>
-  Organizasyon Yönetim
+  <img
+    class="app-logo"
+    src="assets/img/logo.svg"
+    alt="Logo"
+    height="80"
+    style="margin-left: 8px"
+  />
   <span class="toolbar-item-spacer"></span>
   <button
     mat-icon-button
