change the logo

--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,5 +1,10 @@
 <mat-toolbar>
-  Organizasyon Yönetim
+  <img
+    class="logo"
+    src="assets/img/logo.svg"
+    alt="Organization Management Logo"
+    height="90"
+  />
   <span class="example-spacer"></span>
 </mat-toolbar>
 <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
